Tests implementados para H5